# hiccup-ide

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  hiccup-ide.code-workspace
backend/: CLAUDE.md  pyproject.toml  pytest.ini
backend/.agent/rules/: CLAUDE.md
backend/hiccup_ide/: db.sqlite3  manage.py
backend/hiccup_ide/hiccup_ide/: asgi.py  settings.py  urls.py  wsgi.py
backend/hiccup_ide/neural_data/: api.py  apps.py  models.py  schemas.py  urls.py
backend/hiccup_ide/neural_data/api/: __init__.py  activations.py  helpers.py  saliency.py  weights.py
backend/hiccup_ide/neural_data/migrations/: 0001_initial.py  0002_weight.py  0003_work_layerthreshold.py  0004_remove_layerthreshold_slider_value_and_more.py  0005_layerthreshold_slider_value.py  0006_workgraph_worksaliencymap.py  0007_saliencymap_layer_name_worksaliencymap_layer_name.py  0008_activation_layer_name_weight_layer_name.py  0009_alter_activation_layer_name_delete_layerthreshold.py  0010_alter_saliencymap_layer_name_and_more.py  0011_alter_weight_layer_name.py
backend/hiccup_ide/tests/: test_prune_graph.py  test_saliency_standardization.py  test_stats.py  test_thresholds.py  test_weights.py
backend/notebooks/: test-model-load.ipynb
backend/src/hiccup_ide/: __init__.py  activation_processor.py  capture.py  contrib_processor.py  mnist.py  model_to_json.py  utils.py
backend/src/hiccup_ide/contribs/: v1.py  v2.py
backend/src/hiccup_ide/persist/: __init__.py  activation_processor_outputs.py  contribs_processor_outputs.py
backend/tests/: conftest.py  test_activation_processor.py  test_capture.py
(+111 files in other folders)
