[project]
name = "hiccup-ide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "narang99", email = "hariom2711@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastai>=2.8.7",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "torch>=2.11.0",
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
